--- a/boss.ini
+++ b/boss.ini
@@ -195,11 +195,18 @@ before_alert_ment = 입니다
 alert_ment = 곧 1분 내로 젠 됩니다. 장소는 지하감옥 7층 끝방 입니다
 mungtime = 1
 
-bossname = 8층보스, 8층
+bossname = 8층굴베이그, 8굴
 gentime = 36:00
 nogencheck = 0
 before_alert_ment = 입니다
-alert_ment = 곧 1분 내로 젠 됩니다. 장소는 지하감옥 8층 끝방 입니다
+alert_ment = 곧 1분 내로 젠 됩니다. 장소는 지하감옥 8층 입니다
+mungtime = 1
+
+bossname = 8층강글로티, 8강
+gentime = 36:00
+nogencheck = 0
+before_alert_ment = 입니다
+alert_ment = 곧 1분 내로 젠 됩니다. 장소는 지하감옥 8층 입니다
 mungtime = 1
 
 bossname = 테스트
