--- a/boss.ini
+++ b/boss.ini
@@ -174,11 +174,32 @@ before_alert_ment = 입니다
 alert_ment = 곧 1분 내로 젠 됩니다. 장소는 무스펠하임 2시방향 빛의추격로 입니다
 mungtime = 1
 
+bossname = 티르
+gentime = 36:00
+nogencheck = 0
+before_alert_ment = 입니다
+alert_ment = 곧 젠 됩니다. 장소는 요툰하임 11시방향 티르의서리요새 입니다
+mungtime = 1
+
+bossname = 토르
+gentime = 36:00
+nogencheck = 0
+before_alert_ment = 입니다
+alert_ment = 곧 젠 됩니다. 장소는 니다벨리르 3시방향 토르의우레벌판 입니다
+mungtime = 1
+
+bossname = 오딘
+gentime = 36:00
+nogencheck = 0
+before_alert_ment = 입니다
+alert_ment = 곧 젠 됩니다. 장소는 알브하임 중앙 오딘강림지 입니다
+mungtime = 1
+
 bossname = 수르트, 수르
 gentime = 36:00
 nogencheck = 0
 before_alert_ment = 입니다
-alert_ment = 곧 1분 내로 젠 됩니다. 장소는 무스펠하임 1시방향 수르트의용암권좌 입니다
+alert_ment = 곧 젠 됩니다. 장소는 무스펠하임 1시방향 수르트의용암권좌 입니다
 mungtime = 1
 
 bossname = 4층보스, 4층
@@ -195,18 +216,18 @@ before_alert_ment = 입니다
 alert_ment = 곧 1분 내로 젠 됩니다. 장소는 지하감옥 7층 끝방 입니다
 mungtime = 1
 
-bossname = 8층굴베이그, 8굴
+bossname = 지감굴베이그, 지굴
 gentime = 36:00
 nogencheck = 0
 before_alert_ment = 입니다
-alert_ment = 곧 1분 내로 젠 됩니다. 장소는 지하감옥 8층 입니다
+alert_ment = 곧 1분 내로 젠 됩니다. 장소는 지하감옥 최하층 입니다
 mungtime = 1
 
-bossname = 8층강글로티, 8강
+bossname = 지감강글로티, 지강
 gentime = 36:00
 nogencheck = 0
 before_alert_ment = 입니다
-alert_ment = 곧 1분 내로 젠 됩니다. 장소는 지하감옥 8층 입니다
+alert_ment = 곧 1분 내로 젠 됩니다. 장소는 지하감옥 최하층 입니다
 mungtime = 1
 
 bossname = 테스트
