--- a/boss.ini
+++ b/boss.ini
@@ -216,14 +216,14 @@ before_alert_ment = 입니다
 alert_ment = 곧 1분 내로 젠 됩니다. 장소는 지하감옥 7층 끝방 입니다
 mungtime = 1
 
-bossname = 지감굴베이그, 지굴
+bossname = 혼돈굴베이그, 혼굴
 gentime = 36:00
 nogencheck = 0
 before_alert_ment = 입니다
 alert_ment = 곧 1분 내로 젠 됩니다. 장소는 지하감옥 최하층 입니다
 mungtime = 1
 
-bossname = 지감강글로티, 지강
+bossname = 혼돈강글로티, 혼강
 gentime = 36:00
 nogencheck = 0
 before_alert_ment = 입니다
